--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@ body {
     /*center eeverything more easily*/
     /*puts everything in a row*/
     display: flex;
-    /*puts everything back into column*/
-    flex-direction: column;
     /*if flex direction row it would center vertial, if column will center horizontal*/
     align-items: center;
     /*will center items horizontal if not already NEEDS TO HAVE A HEIGHT THO*/
@@ -23,3 +21,59 @@ body {
     margin: 0;
 }
 
+.container {
+    /*children will be put horizontally into a row*/
+    /*flex direction column if you want them on top of eachother*/
+    display: flex;
+    width: 90vw;
+}
+
+.panel {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 80vh;
+    border-radius: 50px;
+    color: #fff;
+    cursor: pointer;
+    /*when we have active class flex will change*/
+    flex: 0.5;
+    margin: 10px;
+    position: relative;
+    /* when clicked this will make transition smoooth*/
+    transition: flex 0.7s ease-in;
+}
+
+.panel h3 {
+    font-size: 24px;
+    /*when position absolute, you can specify position by setting bottom, left, top, right, etc*/
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    margin: 0;
+    /*not showing when inactive*/
+    opacity: 0;
+}
+
+.panel.active {
+    /*if panel active make wider*/
+    flex: 5;
+}
+
+.panel.active h3 {
+    /*if active, let us see it*/
+    opacity: 1;
+}
+
+/*if screen is really small only show three of the divs*/
+
+@media(max-width: 480px) {
+    .container {
+        width: 100vw;
+    }
+
+    /*remove last two panels*/
+    .panel:nth-of-type(4), .panel:nth-of-type(5) {
+        display: none;
+    }
+}
