Added javascript event listeners on panels to toggle active class when clicked. Also added transition to active h3:

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
 .panel.active h3 {
     /*if active, let us see it*/
     opacity: 1;
+    transition: opacity 0.3s ease-in 0.4s;
 }
 
 /*if screen is really small only show three of the divs*/
